--- a/app/src/main/res/layout/activity_playing.xml
+++ b/app/src/main/res/layout/activity_playing.xml
@@ -29,10 +29,10 @@
         android:padding="13dp">
 
         <TextView
-            android:id="@+id/playing_name"
+            android:id="@+id/playingName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="MUSIC NAME"
+            android:text="Music Name"
             android:textColor="@android:color/white"
             android:textSize="25sp" />
 
@@ -43,16 +43,14 @@
             android:layout_marginTop="10dp"
             android:background="@android:color/white" />
         <TextView
-            android:id="@+id/playing_duration"
+            android:id="@+id/playingDuration"
             android:layout_width="wrap_content"
-            android:text="duration"
+            android:text="Duration"
             android:textSize="15sp"
             android:padding="10dp"
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
 
-
     </LinearLayout>
-
 
 </RelativeLayout>
